--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div id="slider">
 
-    <p>Ayang lagi ngapain?</p>
+    <p>Ayang lagi ngapain??</p>
     <p>Pasti lagi mikirin aku hehehe</p>
     <p>Aku punya sesuatu buat kamu</p>
     
