--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <script src="https://raw.githubusercontent.com/henryleonardo89/henry/main/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.4/dist/sweetalert2.all.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/henryleonardo89/henry/main/fonts" />
+  <script src="https://github.com/henryleonardo89/henry/blob/main/query.min.js"></script>
   <title>Subscribe YT Nais ID</title>
 </head>
 
