--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </body>
 <script>
 
-  musik = "8 Letters";
+  musik = "8 Letters.mp3";
   foto = "bubududu-panda.gif";
   background = "wallpaper.jpg";
   noWhatsapp = "6281510059768";
