--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/henryleonardo89/henry/main/styleGombalin.css" />
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/henryleonardo89/henry/main/stylePopUp.css" />
-  <script src="https://raw.githubusercontent.com/henryleonardo89/henry/main/sweetalert2.all.min.js"></script>
+  <link rel="stylesheet" href="https://dekatutorial.github.io/styleGombalin.css" />
+  <link rel="stylesheet" href="https://dekatutorial.github.io/stylePopUp.css" />
+  <script src="https://dekatutorial.github.io/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.4/dist/sweetalert2.all.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" />
