--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="bg"></div> <img src="" alt="" id="fotoku" />
 
   <h2 id="hai">Hai Kamu!</h2>
-  <h3 id="hia">Scrool ke kanan ya</h3>
+  <h3 id="hia">Scroll ke kanan ya</h3>
 
   <div id="slider">
 
