--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   musik = "8 Letters.mp3";
   foto = "bubududu-panda.gif";
-  background = "wallpaper.jpg";
+  background = "wallpaper.jpeg";
   noWhatsapp = "6281510059768";
 
   async function popUp() {
