--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Pasti lagi mikirin aku hehehe</p>
     <p>Aku punya sesuatu buat kamu</p>
     
-    <p>Klik love nya ya<span>💜</span></p>
+    <p>Klik love nya ya ayang<span>💜</span></p>
 
   </div>
 </body>
@@ -55,9 +55,14 @@
 
   async function popUp() {
 
-    await swalo.fire({title: "Aku sayang ayangg", imageUrl: ""});
-    await swalo.fire({title: "Kangen ayangg", imageUrl: ""});
-    kirimPesan();
+    await swalo.fire({title: "Aku kangen ayangg", imageUrl: ""});
+    await swalo.fire({title: "Kangen ga ayang sama aku?", imageUrl: ""});
+    await swalo.fire({title: "Kangen aja apa kangen banget? 😋", imageUrl: ""});   
+    await swalo.fire({title: "Ayangku yg cantik, yg manis, yg baik, kesayangannya aku..", imageUrl: ""});  
+    await swalo.fire({title: "cepet sembuh ya sayangku, biar kita bisa ketemu lagi sayang", imageUrl: ""});
+    await swalo.fire({title: "Aku disini kangen ayang, sayang ayang banyak2, sayang sayang sayang pokoknya hehehe.", imageUrl: ""});
+    await swalo.fire({title: "I love you ayang💜💜.", imageUrl: ""});
+  kirimPesan();
 
   } $(window).on("load", function () {$(".preload").fadeOut("slow");}); var audio = new Audio(musik); audio.autoplay = true; audio.loop = true; bg.style = 'background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("' + background + '");'; fotoku.src = foto; var swalo = Swal.mixin({allowOutsideClick: false}); async function kirimPesan() {var {value: pesan} = await swalo.fire({title: "Tulis pesan", input: "text", confirmButtonText: "Kirim"}); if (pesan) {await swalo.fire("Kirim ke wa aku ya jawaban nya"); location.assign("https://api.whatsapp.com/send?phone=" + noWhatsapp + "&text=" + pesan);} else {await swalo.fire({confirmButtonText: "Iya deh", title: "Jangan dikosongin ya :)"}); kirimPesan();} } document.querySelector("span").addEventListener("click", function () {popUp();}); var open = document.querySelector(".open"); function ilang() {audio.play(); open.style = "transition: 1.5s ease-out all; opacity: 0; transform: scale(100) translateY(-20px); filter: brightness(0);"; setTimeout(function () {open.style = "display:none;";}, 1500); setTimeout(function () {fotoku.style = "opacity: 1; transition: 1s all ease; transform: translateY(0px) scale(1);";}, 500); setTimeout(function () {hai.style = "opacity: 1; transition: 1s all ease; transform: translateY(0px);";}, 1400); setTimeout(function () {hia.style = "opacity: 1; transition: 1s all ease; transform: translateY(0px);";}, 1800); setTimeout(function () {slider.style = "opacity: 1; transition: 1s all ease; transform: translateY(0px) scale(1);";}, 2200);} </script>
 
