--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   </div>
   <div id="bg"></div> <img src="" alt="" id="fotoku" />
 
-  <h2 id="hai">Hai Kamu!</h2>
+  <h2 id="hai">Hai kamu!</h2>
   <h3 id="hia">Scroll ke kanan ya</h3>
 
   <div id="slider">
 
     <p>Ayang lagi ngapain??</p>
     <p>Pasti lagi mikirin aku hehehe</p>
-    <p>Aku punya sesuatu buat kamu</p>
+    <p>Aku punya sesuatu buat ayang</p>
     
     <p>Klik love nya ya ayang<span>💜</span></p>
 
