--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     await swalo.fire({title: "Kangen ga ayang sama aku?", imageUrl: ""});
     await swalo.fire({title: "Kangen aja apa kangen banget? 😋", imageUrl: ""});   
     await swalo.fire({title: "Ayangku yg cantik, yg manis, yg baik, kesayangannya aku..", imageUrl: ""});  
-    await swalo.fire({title: "cepet sembuh ya sayangku, biar kita bisa ketemu lagi sayang", imageUrl: ""});
+    await swalo.fire({title: "cepet sembuh ya sayangku, jangan lupaa minum air putih yang banyaak, obatnya juga dan mam makanan yg sehat dulu yaa, terus buah jangan lupa, paling penting vitamin sama istirahat, biar kita bisa cepet ketemu lagi sayang 🤗", imageUrl: ""});
     await swalo.fire({title: "Aku disini kangen ayang, sayang ayang banyak2, sayang sayang sayang pokoknya hehehe.", imageUrl: ""});
     await swalo.fire({title: "I love you ayang💜💜.", imageUrl: ""});
   kirimPesan();
